<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, SquadLeaderActivity!</string>
    <string name="app_name">Squad Leader</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="sym_dict_dirname">2525cSymDictionary</string>
    <string name="map_config_prefname">mapconfig</string>
    <string name="squad_leader_home_dir">/mnt/sdcard/SquadLeader</string>
    <!-- <string name="squad_leader_home_dir">/storage/sdcard0/SquadLeader</string>  -->
    <string name="map_config_filename">mapconfig.xml</string>
    <string name="open_basemap_panel">Open Basemap Panel</string>
    <string name="choose_basemap">Choose Basemap</string>
    <string name="status_911">Set 911 Status</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_layer_from_web">Add Layer from Web</string>
    <string name="url">URL</string>
    <string name="add_layer_from_web_fragment_tag">AddLayerFromWebDialogFragment</string>
    <string name="add_layer">Add Layer</string>
    <string name="use_as_basemap">Use as Basemap</string>
    <string name="create_spot_report">Create Spot Report</string>
    <string name="toggle_grid">Toggle Grid</string>
    <string name="go_to_mgrs">Ir al Punto</string>
    <string name="dimension_pantalla">Dimension de la Pantalla</string>
    <string name="go_to_mgrs_fragment_tag">GoToMgrsFragment</string>
    <string name="dimension_pantalla_fragment_tag">DimensionPantallaFragment</string>
    <string name="buffer_pantalla_fragment_tag">BufferPantallaFragment</string>
    <string name="mgrs">Introducir dato</string>
    <string name="consultar_coordenadas">Consultar Coordenadas</string>
    <string name="north_arrow_desc">North Arrow (click to rotate map to north up)</string>
    <string name="cert_error_dialog_title">Accept Invalid Certificate?</string>
    <string name="accept">Accept</string>
    <string name="refuse_recommended">Refuse (Recommended)</string>
    <string name="follow_me">Follow Me</string>
    <string name="set_location_mode">Set Location Mode</string>
    <string name="option_location_service">Hardware (GPS)</string>
    <string name="option_simulation_builtin">Simulation (Built-in)</string>
    <string name="option_simulation_file">Simulation (GPX File)</string>
    <string name="chooser_label">File Chooser</string>
    <string name="display_location">Pos:&#160;</string>
    <string name="display_speed">Speed:&#160;</string>
    <string name="display_heading">Heading:&#160;</string>
    <string name="display_time">Time:&#160;</string>
    <string name="pref_angularUnits">Angular units</string>
    <string-array name="pref_angularUnits_entries">
        <item>Degrees</item>
        <item>Mils</item>
    </string-array>
    <string-array name="pref_angularUnits_values">
        <item>@string/wkid_degrees</item>
        <item>@string/wkid_mils</item>
    </string-array>
    <string name="pref_positionReports">Position reports</string>
    <string name="pref_positionReports_summary">Automatically send position reports to listening clients</string>
    <string name="pref_username">Username</string>
    <string name="pref_vehicleType">Vehicle type</string>
    <string name="pref_uniqueId">Unique ID</string>
    <string name="pref_sic">Symbol ID Code</string>
    <string name="pref_sicDefault">SFGPEWRR-------</string>
    <string name="pref_positionReportPeriod">Position report period (ms)</string>
    <string name="pref_positionReportPeriod_summary">&#160;ms between position reports</string>
    <string name="pref_messagePort">Messaging port (1024–65535)</string>
    <string name="pref_resetApp">Reset map</string>
    <string name="pref_resetApp_summary">Reset the map to /mnt/sdcard/SquadLeader/mapconfig.xml if present or built-in settings</string>
    <string name="wkid_degrees">9102</string>
    <string name="wkid_mils">9114</string>
    <string name="settings">Settings</string>
    <string name="reset_map">Reset map?</string>
    <string name="chemlight_red">Red Chem Light</string>
    <string name="chemlight_yellow">Yellow Chem Light</string>
    <string name="chemlight_green">Green Chem Light</string>
    <string name="chemlight_blue">Blue Chem Light</string>
    <string name="hint_mgrs">MGRS</string>
    <string name="size">Size</string>
    <string name="activity">Activity</string>
    <string name="location">Location</string>
    <string name="unit">Unit</string>
    <string name="datetime">Date/Time (Zulu)</string>
    <string name="equipment">Equipment</string>
    <string name="title_activity_spot_report">Spot Report</string>
    <string name="send">Send</string>
    <string name="medir_distancias">Medición de Distancias</string>
    <string name="medir_areas">Medición de Areas</string>
    <string name="buscar_cercanos">Buscar Cercanos</string>
    <string name="consultar">Consultar</string>
    <string name="resetear">reset</string>
    <string name="previsualizacion">Previsualización</string>
    <string-array name="DistanceUnits">
	    <item>Meters</item>
	    <item>Miles</item>
	    <item>Yards</item>
	    <item>Feet</item>
	    <item>Kilometers</item>
	    <item>Miles Nauticas</item>
    </string-array>
    <string-array name="AreaUnits">
        <item>Square Meters</item>
        <item>Acres</item>
        <item>Square Miles</item>
        <item>Square Yards</item>
        <item>Square Kilometers</item>
        <item>Square Miles Nauticas</item>
    </string-array>
    
</resources>
